Remove maven-compiler-plugin configuration altogether and compile with Truffle on the classpath instead of being on the module path